# mmdeploy

./: .gitignore  CMakeLists.txt  shields.json
.github/: release.yml
.github/scripts/: generate_env.py  install_dependencies.py
.github/scripts/prebuild_tools/: install_cudnn.py  install_onnxruntime.py  install_opencv.py  install_openvino.py  install_tensorrt.py  utils.py
.github/workflows/: backend-coreml.yml  backend-pplnn.yml  prebuild-package.yml  prebuild.yml  prebuilt.yml  release.yml
cmake/: MMDeploy.cmake
csrc/mmdeploy/: CMakeLists.txt
csrc/mmdeploy/apis/c/mmdeploy/: CMakeLists.txt  video_recognizer.h
csrc/mmdeploy/apis/python/: classifier.cpp  detector.cpp  pose_detector.cpp  pose_tracker.cpp  restorer.cpp  rotated_detector.cpp  segmentor.cpp  text_detector.cpp  text_recognizer.cpp  video_recognizer.cpp
csrc/mmdeploy/backend_ops/onnxruntime/modulated_deform_conv/: modulated_deform_conv.cpp
csrc/mmdeploy/codebase/mmocr/: CMakeLists.txt
csrc/mmdeploy/codebase/mmocr/cpu/: CMakeLists.txt
csrc/mmdeploy/codebase/mmocr/cuda/: CMakeLists.txt
csrc/mmdeploy/device/cuda/: CMakeLists.txt
csrc/mmdeploy/dylib/: CMakeLists.txt  config.h.in  dylib.cpp  dylib.h
csrc/mmdeploy/dylib/posix/: dylib.cpp
csrc/mmdeploy/dylib/windows/: dylib.cpp
csrc/mmdeploy/monolithic/: CMakeLists.txt
csrc/mmdeploy/net/: CMakeLists.txt
csrc/mmdeploy/net/ncnn/: CMakeLists.txt
csrc/mmdeploy/net/ort/: CMakeLists.txt
csrc/mmdeploy/net/trt/: CMakeLists.txt
csrc/mmdeploy/operation/cuda/: CMakeLists.txt
csrc/preprocess/: CMakeLists.txt  transform_module.cpp  transform_module.h
csrc/preprocess/fuse_cpu/: CMakeLists.txt  fuse_transform_kernel.cpp
csrc/preprocess/fuse_cpu/fuse_impl/: common_kernel.h
csrc/preprocess/fuse_cuda/: CMakeLists.txt  fuse_transform_kernel.cpp
csrc/preprocess/fuse_transform/: CMakeLists.txt  collect.cpp  compose.cpp  crop.cpp  default_format_bundle.cpp  fuse_transform.cpp  fuse_transform.h  image2tensor.cpp  load.cpp  normalize.cpp  pad.cpp  resize.cpp  utils.cpp  utils.h
csrc/preprocess/transform/: compose.cpp  compose.h
demo/csrc/: CMakeLists.txt
demo/preprocess/: CMakeLists.txt  README.md  image_preprocess.cpp
demo/resources/: dbnet.json  fcn.json  pipeline.json  resnet.json  retinanet.json
docs/en/01-how-to-build/: android.md  linux-x86_64.md  windows.md
docs/en/04-supported-codebases/: mmaction2.md
docs/zh_cn/01-how-to-build/: android.md  linux-x86_64.md  windows.md
mmdeploy/: version.py
mmdeploy/backend/sdk/: export_info.py
mmdeploy/codebase/base/: backend_model.py
mmdeploy/pytorch/functions/: __init__.py
mmdeploy/utils/: constants.py
tools/: check_env.py  deploy.py
tools/package_tools/: mmdeploy_builder.py
tools/package_tools/configs/: linux_x64_cpu.yaml  linux_x64_cuda.yaml  linux_x64_prebuilt.yaml  windows_x64-cpu.yaml  windows_x64-cuda.yaml  windows_x64_cpu.yaml  windows_x64_cuda.yaml
tools/package_tools/scripts/linux/: build_sdk.sh
tools/scripts/: build_ubuntu_x64_pplnn.py
